# MicroLLM-Lab

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  queue.py
docs/: architecture.md  demo-script.md  event-model.md  launch-checklist.md  limits.md  quickstart.md
frontend/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  liveViewState.test.ts  liveViewState.ts  main.tsx  styles.css  types.ts
packs/: README.md  abc_music.txt  arithmetic.txt  chess_pgn.txt  json.txt  regex.txt  sql_snippets.txt
scripts/: dev_api.sh  dev_frontend.sh  dev_worker.sh  generate_packs.py  pack_smoke.py  validate_packs.py
shared/: __init__.py  constants.py  contracts.ts  packs.py  rate_limit.py  redis_client.py  settings.py  store.py  types.py  validation.py
skills/: coding-guidelines.
tests/: test_api_integration.py  test_autograd.py  test_math_ops.py  test_upload_validation.py  test_validation.py
worker/: __init__.py  jobs.py  main.py  trainer.py
